--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>I'm Jerome.</h1>
     <h2>a <span class="pro">pro</span>grammer.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img src="images/mountainsun2.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
