--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>I'm Jerome.</h1>
     <h2>a <span class="pro">pro</span>grammer.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountainsun2.png" alt="mountain-img">
+    <img src="images/mountainsun4.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
@@ -29,17 +29,16 @@
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="lock-img" src="images/keys.png"  alt="Keys" >
-
+        <br>
         <h3>Locksmith</h3>
-        <p>Today since 2008 i've been working as a Journeyman Certified locksmith, but looking for a new path in my life!</p>
-        <p class="flaticon-attribute-freepik">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
+        <p>Today since 2008 i've been working as a Journeyman Certified locksmith, but looking for a new path in my life!</p><br>
 
       </div>
       <div class="skill-row">
         <img class="coding-img" src="images/coding.png" alt="coding">
+        <br>
         <h3>Web Development</h3>
-        <p>I've always loved computers and games, and my wife <br>bought me a online course at <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Udemy</a> for my birthday, and i loved it!</p>
-        <p class="flaticon-attribute-prettycons">Icons made by <a href="https://www.flaticon.com/authors/prettycons" title="prettycons">prettycons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
+        <p>I've always loved computers and games, and my wife <br>bought me a online course at <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Udemy</a> for my birthday, and i loved it!</p><br>
 
       </div>
     </div>
@@ -58,6 +57,10 @@
     <a class="footer-link" href="https://twitter.com/Bockarn">Twitter</a>
     <a class="footer-link" href="https://www.facebook.com/jeromebock">Facebook</a>
     <p class="copyright">© 2020 Jerome Gordon-Bock.</p>
+  </div>
+  <div class="flaticon">
+    <p class="flaticon-attribute-freepik">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
+    <p class="flaticon-attribute-prettycons">Icons made by <a href="https://www.flaticon.com/authors/prettycons" title="prettycons">prettycons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
   </div>
 
 
