--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="profile">
       <img src="images/Jerome.png" alt="Jerome Gordon-Bock">
       <h2>Hello.</h2>
-      <p class="presentation">My name is Jerome Gordon-Bock and i'm a student and educating myself to be a fullstack junior web developer!</p>
+      <p class="presentation">My name is Jerome Gordon-Bock and I'm a student and educating myself to be a fullstack junior web developer!</p>
     </div>
     <hr>
     <div class="skills">
@@ -30,13 +30,13 @@
       <div class="skill-row">
         <img class="lock-img" src="images/keys.png"  alt="Keys" >
         <h3>Locksmith</h3>
-        <p>From 2008 until 2022 i've been working as a Journeyman Certified locksmith, but looking for a new path in my life!</p><br>
+        <p>From 2008 until 2022 I've been working as a Journeyman Certified locksmith, but looking for a new path in my life!</p><br>
 
       </div>
       <div class="skill-row">
         <img class="coding-img" src="images/coding.png" alt="coding">
         <h3>Web Development</h3>
-        <p>I've always loved computers and games, and my wife <br>bought me a online course at <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Udemy</a> for my birthday, and i loved it!</p><br>
+        <p>I've always loved computers and games, and my wife <br>bought me a online course at <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Udemy</a> for my birthday, and I loved it!</p><br>
 
       </div>
     </div>
