--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Jerome.</h1>
-    <h2>a <span class="pro">pro</span>grammer.</h2>
+    <h2>a <span class="pro">pro</span>grammer</h2>
+    <h4>in development.</h4>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountainsun4.png" alt="mountain-img">
   </div>
@@ -30,17 +31,33 @@
       <div class="skill-row">
         <img class="lock-img" src="images/keys.png"  alt="Keys" >
         <h3>Locksmith</h3>
-        <p>From 2008 until 2022 I've been working as a Journeyman Certified locksmith, but looking for a new path in my life!</p><br>
+        <p>From 2008 until 2022 I've been working as a Journeyman Certified locksmith, but started looking for a new path in my life around 2022.</p><br>
 
       </div>
       <div class="skill-row">
         <img class="coding-img" src="images/coding.png" alt="coding">
         <h3>Web Development</h3>
-        <p>I've always loved computers and games, and my wife <br>bought me a online course at <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Udemy</a> for my birthday, and I loved it!</p><br>
+        <p>I've always loved computers and games, and my wife bought me a online course at <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Udemy</a> for my birthday, and I loved it! But unfortunately I never got the time to finish it. </p><br>
 
       </div>
+      <div class="skill-row">
+        <img class="it-tech-img" src="images/van.png" alt="van">
+        <h3>It-Technician</h3>
+        <p>between 2023 to currently I've been working as a IT-Technician for homes and businesses, but have just started again to educate myself to webdeveloper.</p>
+      </div>
+
+      <div>
+        <div class="skill-row">
+          <img class="coding-img" src="images/coding.png" alt="coding">
+          <h3>Web development</h3>
+          <p>Starting August 2025 im heading back to the schoolbench at <a href="https://www.tucsweden.se/utbildning/program/webbutvecklare-distans-jonkoping/">TUC sweden Jönköping</a>, with their vocational education webdevelopment program.</p>
+        </div>
+      </div>
+
     </div>
+
     <hr>
+
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>Email</h3>
@@ -57,12 +74,16 @@
     <p class="copyright">© 2025 Jerome Gordon-Bock.</p>
   </div>
   <div class="flaticon">
-    <p class="flaticon-attribute-freepik">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
-    <p class="flaticon-attribute-prettycons">Icons made by <a href="https://www.flaticon.com/authors/prettycons" title="prettycons">prettycons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
+    <!-- <a href="Bockarns.html"> -->
+  <img class="bockarns" src="images/bockarns-btn.png" alt="Bockarns Gaming">
+    <!-- </a> -->
+  <p class="flaticon-attribute-freepik">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
+  <p class="flaticon-attribute-prettycons">Icons made by <a href="https://www.flaticon.com/authors/prettycons" title="prettycons">prettycons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
+  <p class="flaticon-attribute-freepik">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="smashicons">smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
+
   </div>
 
 
 </body>
 
 </html>
-
