--- a/index.html
+++ b/index.html
@@ -38,21 +38,19 @@
         <img class="coding-img" src="images/coding.png" alt="coding">
         <h3>Web Development</h3>
         <p>I've always loved computers and games, and my wife bought me a online course at <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Udemy</a> for my birthday, and I loved it! But unfortunately I never got the time to finish it. </p><br>
-
       </div>
+      
       <div class="skill-row">
         <img class="it-tech-img" src="images/van.png" alt="van">
         <h3>It-Technician</h3>
-        <p>between 2023 to currently I've been working as a IT-Technician for homes and businesses, but have just started again to educate myself to webdeveloper.</p>
+        <p>between 2023 to currently I've been working as a IT-Technician for homes and businesses, but have just started again to educate myself to webdeveloper.</p><br>
       </div>
 
-      <div>
         <div class="skill-row">
           <img class="coding-img" src="images/coding.png" alt="coding">
           <h3>Web development</h3>
-          <p>Starting August 2025 im heading back to the schoolbench at <a href="https://www.tucsweden.se/utbildning/program/webbutvecklare-distans-jonkoping/">TUC sweden Jönköping</a>, with their vocational education webdevelopment program.</p>
+          <p>Starting August 2025 im heading back to the schoolbench at <a href="https://www.tucsweden.se/utbildning/program/webbutvecklare-distans-jonkoping/">TUC sweden Jönköping</a>, with their vocational education webdevelopment program.</p><br>
         </div>
-      </div>
 
     </div>
 
@@ -87,3 +85,4 @@
 </body>
 
 </html>
+
