--- a/index.html
+++ b/index.html
@@ -1,88 +1,156 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Jerome Gordon-Bock</title>
+    <link rel="stylesheet" href="CSS/styles.css" />
+    <link rel="icon" href="images/faviconjgb.ico" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Jerome Gordon-Bock</title>
-  <link rel="stylesheet" href="CSS/styles.css">
-  <link rel="icon" href="images/faviconjgb.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
-</head>
-
-<body>
-  <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-    <h1>I'm Jerome.</h1>
-    <h2>a <span class="pro">pro</span>grammer</h2>
-    <h4>in development.</h4>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountainsun4.png" alt="mountain-img">
-  </div>
-
-  <div class="middle-container">
-    <div class="profile">
-      <img src="images/Jerome.png" alt="Jerome Gordon-Bock">
-      <h2>Hello.</h2>
-      <p class="presentation">My name is Jerome Gordon-Bock and I'm a student and educating myself to be a fullstack junior web developer!</p>
+  <body>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
+      <h1>I'm Jerome.</h1>
+      <h2>a <span class="pro">pro</span>grammer</h2>
+      <h4>in development.</h4>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
+      <img src="images/mountainsun4.png" alt="mountain-img" />
     </div>
-    <hr>
-    <div class="skills">
-      <h2>My Skills.</h2>
-      <div class="skill-row">
-        <img class="lock-img" src="images/keys.png"  alt="Keys" >
-        <h3>Locksmith</h3>
-        <p>From 2008 until 2022 I've been working as a Journeyman Certified locksmith, but started looking for a new path in my life around 2022.</p><br>
 
+    <div class="middle-container">
+      <div class="profile">
+        <img src="images/Jerome.png" alt="Jerome Gordon-Bock" />
+        <h2>Hello.</h2>
+        <p class="presentation">
+          My name is Jerome Gordon-Bock and I'm a student and educating myself
+          to be a fullstack junior web developer!
+        </p>
       </div>
-      <div class="skill-row">
-        <img class="coding-img" src="images/coding.png" alt="coding">
-        <h3>Web Development</h3>
-        <p>I've always loved computers and games, and my wife bought me a online course at <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Udemy</a> for my birthday, and I loved it! But unfortunately I never got the time to finish it. </p><br>
-      </div>
-      
-      <div class="skill-row">
-        <img class="it-tech-img" src="images/van.png" alt="van">
-        <h3>It-Technician</h3>
-        <p>between 2023 to currently I've been working as a IT-Technician for homes and businesses, but have just started again to educate myself to webdeveloper.</p><br>
-      </div>
-
+      <hr />
+      <div class="skills">
+        <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="coding-img" src="images/coding.png" alt="coding">
-          <h3>Web development</h3>
-          <p>Starting August 2025 im heading back to the schoolbench at <a href="https://www.tucsweden.se/utbildning/program/webbutvecklare-distans-jonkoping/">TUC sweden Jönköping</a>, with their vocational education webdevelopment program.</p><br>
+          <img class="lock-img" src="images/keys.png" alt="Keys" />
+          <h3>Locksmith</h3>
+          <p>
+            From 2008 until 2022 I've been working as a Journeyman Certified
+            locksmith, but started looking for a new path in my life around
+            2022.
+          </p>
+          <br />
+        </div>
+        <div class="skill-row">
+          <img class="coding-img" src="images/coding.png" alt="coding" />
+          <h3>Web Development</h3>
+          <p>
+            I've always loved computers and games, and my wife bought me a
+            online course at
+            <a
+              href="https://www.udemy.com/course/the-complete-web-development-bootcamp/"
+              >Udemy</a
+            >
+            for my birthday, and I loved it! But unfortunately I never got the
+            time to finish it.
+          </p>
+          <br />
+        </div>
+        <div class="skill-row">
+          <img class="it-tech-img" src="images/van.png" alt="van" />
+          <h3>IT Technician</h3>
+          <p>
+            between 2023 to currently I've been working as a IT Technician for
+            homes and businesses, but have just started again to educate myself
+            to webdeveloper.
+          </p>
+          <br />
         </div>
 
+        <div class="skill-row">
+          <img class="coding-img" src="images/coding.png" alt="coding" />
+          <h3>Web development</h3>
+          <p>
+            Starting August 2025 I'm heading back to the schoolbench at
+            <a
+              href="https://www.tucsweden.se/utbildning/program/webbutvecklare-distans-jonkoping/"
+              >TUC sweden Jönköping</a
+            >, with their vocational education webdevelopment program.
+          </p>
+          <br />
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Email</h3>
+        <p class="contact-message">
+          To get in contact with me, click the button below to send a email to
+          me.
+        </p>
+        <a class="btn" href="mailto:jerome.bock@gmail.com">CONTACT ME</a>
+      </div>
     </div>
+    <a
+      href="https://www.udemy.com/course/the-complete-web-development-bootcamp/"
+    ></a>
 
-    <hr>
-
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3>Email</h3>
-      <p class="contact-message">To get in contact with me, click the button below to send a email to me.</p>
-      <a class="btn" href="mailto:jerome.bock@gmail.com">CONTACT ME</a>
+    <div class="bottom-container">
+      <a
+        class="footer-link"
+        href="https://www.linkedin.com/in/jerome-gordon-bock/"
+        >LinkedIn</a
+      >
+      <a class="footer-link" href="https://twitter.com/Bockarn">Twitter</a>
+      <a class="footer-link" href="https://www.facebook.com/jeromebock"
+        >Facebook</a
+      >
+      <a class="footer-link" href="https://github.com/Bockarns">Github</a>
+      <p class="copyright">© 2026 Jerome Gordon-Bock.</p>
     </div>
-  </div>
-<a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/"></a>
+    <div class="flaticon">
+      <!-- <a href="Bockarns.html"> -->
+      <img
+        class="bockarns"
+        src="images/bockarns-btn.png"
+        alt="Bockarns Gaming"
+      />
+      <!-- </a> -->
 
-  <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/jerome-gordon-bock-0b4620114/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/Bockarn">Twitter</a>
-    <a class="footer-link" href="https://www.facebook.com/jeromebock">Facebook</a>
-    <p class="copyright">© 2025 Jerome Gordon-Bock.</p>
-  </div>
-  <div class="flaticon">
-    <!-- <a href="Bockarns.html"> -->
-  <img class="bockarns" src="images/bockarns-btn.png" alt="Bockarns Gaming">
-    <!-- </a> -->
-  <p class="flaticon-attribute-freepik">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
-  <p class="flaticon-attribute-prettycons">Icons made by <a href="https://www.flaticon.com/authors/prettycons" title="prettycons">prettycons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
-  <p class="flaticon-attribute-freepik">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="smashicons">smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
-
-  </div>
-
-
-</body>
-
+      <p class="flaticon-attribute-freepik">
+        Icons made by
+        <a href="https://www.flaticon.com/authors/freepik" title="Freepik"
+          >Freepik</a
+        >
+        from
+        <a href="https://www.flaticon.com/" title="Flaticon">
+          www.flaticon.com</a
+        >
+      </p>
+      <p class="flaticon-attribute-prettycons">
+        Icons made by
+        <a href="https://www.flaticon.com/authors/prettycons" title="prettycons"
+          >prettycons</a
+        >
+        from
+        <a href="https://www.flaticon.com/" title="Flaticon">
+          www.flaticon.com</a
+        >
+      </p>
+      <p class="flaticon-attribute-freepik">
+        Icons made by
+        <a href="https://www.flaticon.com/authors/smashicons" title="smashicons"
+          >smashicons</a
+        >
+        from
+        <a href="https://www.flaticon.com/" title="Flaticon">
+          www.flaticon.com</a
+        >
+      </p>
+    </div>
+  </body>
 </html>
-
