--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jerome Gordon-Bock</title>
     <link rel="stylesheet" href="CSS/styles.css" />
+    <link rel="stylesheet" href="CSS/nav.css" />
     <link rel="icon" href="images/faviconjgb.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
@@ -12,40 +14,80 @@
   </head>
 
   <body>
-    <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
+    <header class="header">
+      <nav class="main-nav">
+        <input type="checkbox" name="menu-toggle" id="menu-toggle" />
+        <label for="menu-toggle" class="hamburger-menu">
+          <span class="bar top"></span>
+          <span class="bar middle"></span>
+          <span class="bar bottom"></span>
+        </label>
+        <ul class="menu">
+          <li class="logo-holder"></li>
+          <li class="hidden-menu-choice"><a href="#top">Start</a></li>
+          <li><a href="#jag">Profile</a></li>
+          <li>
+            <a href="#skill">Experience</a>
+          </li>
+          <li><a href="#contact">Contact me</a></li>
+          <li>
+            <a href="./CV.html">CV/Resume</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <div class="top-container" id="top">
+      <img
+        class="cloud-top cloud"
+        onclick="myMove()"
+        src="images/cloud.png"
+        alt="cloud-img"
+      />
       <h1>I'm Jerome.</h1>
       <h2>a <span class="pro">pro</span>grammer</h2>
       <h4>in development.</h4>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
+      <img class="cloud-bottom cloud" src="images/cloud.png" alt="cloud-img" />
       <img src="images/mountainsun4.png" alt="mountain-img" />
     </div>
 
     <div class="middle-container">
-      <div class="profile">
+      <div class="profile" id="jag">
         <img src="images/Jerome.png" alt="Jerome Gordon-Bock" />
-        <h2>Hello.</h2>
+        <h2>Hello</h2>
         <p class="presentation">
           My name is Jerome Gordon-Bock and I'm a student and educating myself
           to be a fullstack junior web developer!
         </p>
       </div>
       <hr />
-      <div class="skills">
-        <h2>My Skills.</h2>
+      <div class="skills" id="skill">
+        <h2>My Experience</h2>
         <div class="skill-row">
-          <img class="lock-img" src="images/keys.png" alt="Keys" />
-          <h3>Locksmith</h3>
+          <img class="coding-img" src="images/coding.png" alt="coding" />
+          <h3 class="left-h3">Web development</h3>
           <p>
-            From 2008 until 2022 I've been working as a Journeyman Certified
-            locksmith, but started looking for a new path in my life around
-            2022.
+            Starting August 2025 I'm heading back to the schoolbench at
+            <a
+              href="https://www.tucsweden.se/utbildning/program/webbutvecklare-distans-jonkoping/"
+              >TUC sweden Jönköping</a
+            >, with their vocational education webdevelopment program.
           </p>
           <br />
         </div>
         <div class="skill-row">
+          <img class="it-tech-img" src="images/van.png" alt="van" />
+          <h3 class="right-h3">IT Technician</h3>
+          <p>
+            between 2023 to currently I've been working as a IT Technician for
+            homes and businesses, but have just started again to educate myself
+            to webdeveloper.
+          </p>
+          <br />
+        </div>
+
+        <div class="skill-row">
           <img class="coding-img" src="images/coding.png" alt="coding" />
-          <h3>Web Development</h3>
+          <h3 class="left-h3">Web Development</h3>
           <p>
             I've always loved computers and games, and my wife bought me a
             online course at
@@ -58,26 +100,14 @@
           </p>
           <br />
         </div>
-        <div class="skill-row">
-          <img class="it-tech-img" src="images/van.png" alt="van" />
-          <h3>IT Technician</h3>
-          <p>
-            between 2023 to currently I've been working as a IT Technician for
-            homes and businesses, but have just started again to educate myself
-            to webdeveloper.
-          </p>
-          <br />
-        </div>
 
         <div class="skill-row">
-          <img class="coding-img" src="images/coding.png" alt="coding" />
-          <h3>Web development</h3>
+          <img class="lock-img" src="images/keys.png" alt="Keys" />
+          <h3 class="right-h3">Locksmith</h3>
           <p>
-            Starting August 2025 I'm heading back to the schoolbench at
-            <a
-              href="https://www.tucsweden.se/utbildning/program/webbutvecklare-distans-jonkoping/"
-              >TUC sweden Jönköping</a
-            >, with their vocational education webdevelopment program.
+            From 2008 until 2022 I've been working as a Journeyman Certified
+            locksmith, but started looking for a new path in my life around
+            2022.
           </p>
           <br />
         </div>
@@ -85,7 +115,7 @@
 
       <hr />
 
-      <div class="contact-me">
+      <div class="contact-me" id="contact">
         <h2>Get In Touch</h2>
         <h3>Email</h3>
         <p class="contact-message">
