Mountain img size solved

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
       <h2>a <span class="pro">pro</span>grammer</h2>
       <h4>in development.</h4>
       <img class="cloud-bottom cloud" src="images/cloud.png" alt="cloud-img" />
-      <img src="images/mountainsun4.png" alt="mountain-img" />
+      <img
+        class="mountain-img"
+        src="images/mountainsun4.png"
+        alt="mountain-img"
+      />
     </div>
 
     <div class="middle-container">
