Added some keyfram animations to the sun. also implemented flex to top-container

--- a/index.html
+++ b/index.html
@@ -37,20 +37,18 @@
       </nav>
     </header>
     <div class="top-container" id="top">
-      <img
-        class="cloud-top cloud"
-        onclick="myMove()"
-        src="images/cloud.png"
-        alt="cloud-img"
-      />
-      <h1>I'm Jerome.</h1>
-      <h2>a <span class="pro">pro</span>grammer</h2>
-      <h4>in development.</h4>
+      <img class="cloud-top cloud" src="images/cloud.png" alt="cloud-img" />
+      <div class="welcome">
+        <h1>I'm Jerome.</h1>
+        <h2>a <span class="pro">pro</span>grammer</h2>
+        <h4>in development.</h4>
+      </div>
       <img class="cloud-bottom cloud" src="images/cloud.png" alt="cloud-img" />
+      <img class="mountain-img" src="images/mountain.png" alt="mountain-img" />
       <img
-        class="mountain-img"
-        src="images/mountainsun4.png"
-        alt="mountain-img"
+        class="sun-img"
+        src="./images/Sun250.png"
+        alt="Sun behind mountain"
       />
     </div>
 
