--- a/CV-engl.html
+++ b/CV-engl.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="sv">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,12 +17,16 @@
   </head>
   <body>
     <header>
+      <div class="cv-menu">
+        <a class="go-back" href="./index.html">Back</a>
+        <a class="change-lang" href="./CV-swed.html">Swedish</a>
+      </div>
       <div class="presentation">
-        <a href="./index.html">Back</a>
         <h1>Jerome Gordon-Bock - CV</h1>
         <address>
           <p>
-            <img class="icon" src="./images/home.png" alt="hus" /> Bruksvägen 5A
+            <img class="icon" src="./images/home.png" alt="house" /> Bruksvägen
+            5A
             <br />
             611 76 NÄVEKVARN <br />
             Sweden
@@ -32,10 +36,10 @@
           <img
             class="icon"
             src="./images/telephone-handle-silhouette.png"
-            alt="telefon"
+            alt="phone"
           />
           073-753 52 35
-          <img class="icon" src="./images/email.png" alt="epost" />
+          <img class="icon" src="./images/email.png" alt="email" />
           <a href="mailto:jerome.bock@gmail.com" target="_blank"
             >jerome.bock@gmail.com</a
           >
@@ -70,14 +74,12 @@
             <h4>Birth Place</h4>
             <p>Stockholm</p>
           </div>
-          <!-- </div>
-      <div class="uppgifter-row"> -->
           <div class="uppgifter card-5">
             <h4>Marital Status</h4>
-            <p>Gift</p>
+            <p>Married</p>
           </div>
           <div class="uppgifter card-6">
-            <h4>Drivers License</h4>
+            <h4>Driver’s License</h4>
             <p>B</p>
           </div>
           <div class="uppgifter card-7">
@@ -94,13 +96,13 @@
             </p>
           </div>
           <div class="uppgifter card-8">
-            <h4>Github</h4>
+            <h4>GitHub</h4>
             <p>
               <a href="https://github.com/Bockarns" target="_blank"
                 ><img
                   id="github"
                   src="./images/github-sign.png"
-                  alt="Clickable image of Github"
+                  alt="Clickable image of GitHub"
               /></a>
             </p>
           </div>
@@ -110,154 +112,153 @@
       <section>
         <div class="personligt">
           <p>
-            Studerar Webbutveckling på TUC Sweden, arbetar på Smartify Sverige
-            AB som IT tekniker.
+            Studying Web Development at TUC Sweden and working at Smartify
+            Sverige AB as an IT technician.
           </p>
           <p>
-            Webbutveckling är något som intresserar mig väldigt mycket, och jag
-            uppskattar verkligen att arbeta med kod, som tex HTML och CSS, jag
-            gillar att se hur idéer snabbt blir till något visuellt och
-            användbart. Mitt intresse gör att jag lägger ner extra tid på att
-            lära mig mer och ständigt utvecklas.
+            Web development is something that interests me greatly, and I truly
+            enjoy working with code such as HTML and CSS. I like seeing how
+            ideas quickly turn into something visual and useful. But I also
+            truly enjoy the backend as well, SQL and C#. My interest motivates
+            me to spend extra time learning more and continuously improving.
           </p>
           <p>
-            Tryck på knappen för att ladda ner mitt CV som PDF .
+            Click the button to download my CV as a PDF.
             <a href="./Downloadables/Jerome Gordon-Bock CV.pdf" download="CV"
-              ><button class="btn">Nedladdningsbart CV</button></a
+              ><button class="btn">Downloadable CV (Swedish)</button></a
             >
           </p>
         </div>
         <hr />
         <div class="arbetslivserfarenhet">
-          <h2>Arbetslivserfarenhet</h2>
+          <h2>Work Experience</h2>
           <dl>
             <dt class="table-header">
               Smartify Sverige AB<span class="time">2023 - Present</span>
             </dt>
-            <dt class="title">IT Tekniker</dt>
+            <dt class="title">IT Technician</dt>
             <dd>
-              -Arbetar som IT Tekniker för hem och kontor, åker runt och hjälper
-              privatpersoner och företag med smarta hem och kontorslösningar,
+              -Working as an IT technician for homes and offices, traveling to
+              help individuals and companies with smart home and office
+              solutions
             </dd>
+            <dd>-Installation of screens, TVs, routers, computers, and more</dd>
             <dd>
-              -Installation av skärmar, tv apparater, routrar, datorer och
-              mycket mer
-            </dd>
-            <dd>
-              -Hjälper till med allt från att få internet att fungera till att
-              få igång datorer, tv, kanaler, konferensesystem, radio och mycket
-              mer att fungera.
+              -Helping with everything from getting internet to work to setting
+              up computers, TVs, channels, conference systems, radio, and more
             </dd>
           </dl>
           <dl>
             <dt class="table-header">
               Certego AB<span class="time">2012 - 2022</span>
             </dt>
-            <dt class="title">Låstekniker</dt>
-            <dd>-Arbetat i verkstan och butiken</dd>
-            <dd>-Arbetat på fält som låssmed.</dd>
+            <dt class="title">Locksmith</dt>
+            <dd>-Worked in the workshop and store</dd>
+            <dd>-Worked in the field as a locksmith</dd>
             <dd>
-              -Tillverkning av nycklar och cylindrar, sålt lås och tillbehör
-              passande till kunds behov. Åkt runt och servat, installerat och
-              demonterat lås och tillbehör både under schemalagd arbetstid och
-              under jourtid. Innehar gesällbrev inom låssmedsyrket sedan 2015.
+              -Manufactured keys and cylinders, sold locks and accessories
+              suited to customer needs. Performed service, installation, and
+              removal of locks and accessories both during scheduled hours and
+              on-call. Holder of a journeyman certificate in locksmithing since
+              2015.
             </dd>
           </dl>
           <dl>
             <dt class="table-header">
               Bysmeden Lås AB<span class="time">2008 - 2012</span>
             </dt>
-            <dt class="title">Butik och verkstad</dt>
-            <dd>-Arbetat i verkstan och butiken</dd>
+            <dt class="title">Shop and Workshop</dt>
+            <dd>-Worked in the workshop and store</dd>
             <dd>
-              -Tillverkning av nycklar och cylindrar, sålt lås och tillbehör
-              passande till kunds behov.
+              -Manufactured keys and cylinders, sold locks and accessories
+              suited to customer needs
             </dd>
           </dl>
           <dl>
             <dt class="table-header">
               Audio Video AB<span class="time">2006 - 2008</span>
             </dt>
-            <dt class="title">Antenn- och Parabolmontör</dt>
-            <dd>-Installation och service av antenn och paraboler</dd>
+            <dt class="title">Antenna and Satellite Installer</dt>
+            <dd>-Installation and service of antennas and satellite dishes</dd>
             <dd>
-              -Installation av multimedia enheter så som TV, DVD, Radio och
-              digitalboxar
+              -Installation of multimedia devices such as TVs, DVDs, radios, and
+              digital boxes
             </dd>
-            <dd>-Försäljning i butik</dd>
+            <dd>-Sales in store</dd>
           </dl>
         </div>
       </section>
       <hr />
       <section>
         <div class="utbildning">
-          <h2>Utbildningar</h2>
+          <h2>Education</h2>
           <dl>
             <dt class="table-header">
-              Yrkeshögskola <span class="time">2025 - Present</span>
+              Higher Vocational Education
+              <span class="time">2025 - Present</span>
             </dt>
-            <dd>-TUC Sweden AB, Webbutveckling</dd>
+            <dd>-TUC Sweden AB, Web Development</dd>
           </dl>
           <dl>
             <dt class="table-header">
-              Komvux<span class="time">2022 - 2023</span>
+              Adult Education<span class="time">2022 - 2023</span>
             </dt>
-            <dd>-Matematik 2b</dd>
-            <dd>-Engelska 6</dd>
-            <dd>-Webbutveckling 1</dd>
-            <dd>-Programmering 1</dd>
+            <dd>-Mathematics 2b</dd>
+            <dd>-English 6</dd>
+            <dd>-Web Development 1</dd>
+            <dd>-Programming 1</dd>
           </dl>
           <dl>
             <dt class="table-header">
-              Gymnasium<span class="time">2001 - 2004</span>
+              Upper Secondary School<span class="time">2001 - 2004</span>
             </dt>
-            <dd>-Värmdö Gymnasium, Handelsprogrammet</dd>
+            <dd>-Värmdö Upper Secondary School, Business Program</dd>
           </dl>
         </div>
         <hr />
         <div class="intressen">
-          <h2>Intressen</h2>
+          <h2>Interests</h2>
           <ul>
-            <li>Familjen</li>
-            <li>Vänner</li>
-            <li>Dator och datorspel</li>
-            <li>Teknik i allmänhet</li>
+            <li>Family</li>
+            <li>Friends</li>
+            <li>Computers and gaming</li>
+            <li>Technology in general</li>
           </ul>
         </div>
         <hr />
         <div class="referenser">
-          <h2>Referenser</h2>
-          <p>Referenser lämnas på begäran.</p>
+          <h2>References</h2>
+          <p>References available upon request.</p>
         </div>
         <hr />
         <div class="kompetens">
-          <h2>Kompetens</h2>
+          <h2>Skills</h2>
           <table class="kompetens-table">
             <tbody id="kompetens-body">
               <tr>
                 <td>HTML</td>
                 <td>-</td>
-                <td>Bra</td>
+                <td>Good</td>
               </tr>
               <tr>
                 <td>CSS</td>
                 <td>-</td>
-                <td>Bra</td>
+                <td>Good</td>
               </tr>
               <tr>
-                <td>Javascript</td>
+                <td>JavaScript</td>
                 <td>-</td>
-                <td>Grundläggande (Fördjupning kommer)</td>
+                <td>Basic (Further development coming)</td>
               </tr>
               <tr>
                 <td>C#/.NET</td>
                 <td>-</td>
-                <td>Grundläggande (Fördjupning pågår)</td>
+                <td>Basic (Further development in progress)</td>
               </tr>
               <tr>
                 <td>MS SQL</td>
                 <td>-</td>
-                <td>Grundläggande (Fördjupning pågår)</td>
+                <td>Basic (Further development in progress)</td>
               </tr>
             </tbody>
           </table>
@@ -283,10 +284,10 @@
       <a
         href="https://www.flaticon.com/free-icons/linkedin"
         title="linkedin icons"
-        >Linkedin icons created by riajulislam - Flaticon</a
+        >LinkedIn icons created by riajulislam - Flaticon</a
       ><br />
       <a href="https://www.flaticon.com/free-icons/github" title="github icons"
-        >Github icons created by Dave Gandy - Flaticon</a
+        >GitHub icons created by Dave Gandy - Flaticon</a
       >
     </div>
   </body>
