--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
           </li>
           <li><a href="#contact">Contact me</a></li>
           <li>
-            <a href="./CV.html">CV/Resume</a>
+            <a href="./CV-engl.html">CV/Resume</a>
           </li>
         </ul>
       </nav>
     </header>
-    <div class="top-container" id="top">
+    <section class="top-container" id="top">
       <img class="cloud-top cloud" src="images/cloud.png" alt="cloud-img" />
       <div class="welcome">
         <h1>I'm Jerome.</h1>
@@ -50,19 +50,29 @@
         src="./images/Sun250.png"
         alt="Sun behind mountain"
       />
-    </div>
+    </section>
 
-    <div class="middle-container">
-      <div class="profile" id="jag">
+    <section class="middle-container" id="jag">
+      <div class="profile">
         <img src="images/Jerome.png" alt="Jerome Gordon-Bock" />
         <h2>Hello</h2>
-        <p class="presentation">
-          My name is Jerome Gordon-Bock and I'm a student and educating myself
-          to be a fullstack junior web developer!
+        <p class="presentation">My name is Jerome Gordon-Bock</p>
+        <p>
+          I'm very passionate about web development and enjoy working across the
+          full stack, from frontend design to backend logic and databases with
+          C# and SQL.
+        </p>
+        <p>
+          I enjoy turning ideas into real, functional systems and solving
+          problems through code.
+        </p>
+        <p>
+          I'm currently studying to become a web developer, and I'm highly
+          motivated to keep growing my skills and contributing to real projects.
         </p>
       </div>
-      <hr />
-      <div class="skills" id="skill">
+      <div class="break-line" id="skill"></div>
+      <div class="skills">
         <h2>My Experience</h2>
         <div class="skill-row">
           <img class="coding-img" src="images/coding.png" alt="coding" />
@@ -74,7 +84,6 @@
               >TUC sweden Jönköping</a
             >, with their vocational education webdevelopment program.
           </p>
-          <br />
         </div>
         <div class="skill-row">
           <img class="it-tech-img" src="images/van.png" alt="van" />
@@ -84,7 +93,6 @@
             homes and businesses, but have just started again to educate myself
             to webdeveloper.
           </p>
-          <br />
         </div>
 
         <div class="skill-row">
@@ -100,7 +108,6 @@
             for my birthday, and I loved it! But unfortunately I never got the
             time to finish it.
           </p>
-          <br />
         </div>
 
         <div class="skill-row">
@@ -111,13 +118,12 @@
             locksmith, but started looking for a new path in my life around
             2022.
           </p>
-          <br />
         </div>
       </div>
 
-      <hr />
+      <div class="break-line" id="contact"></div>
 
-      <div class="contact-me" id="contact">
+      <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>Email</h3>
         <p class="contact-message">
@@ -126,12 +132,12 @@
         </p>
         <a class="btn" href="mailto:jerome.bock@gmail.com">CONTACT ME</a>
       </div>
-    </div>
+    </section>
     <a
       href="https://www.udemy.com/course/the-complete-web-development-bootcamp/"
     ></a>
 
-    <div class="bottom-container">
+    <section class="bottom-container">
       <a
         class="footer-link"
         href="https://www.linkedin.com/in/jerome-gordon-bock/"
@@ -143,8 +149,8 @@
       >
       <a class="footer-link" href="https://github.com/Bockarns">Github</a>
       <p class="copyright">© 2026 Jerome Gordon-Bock.</p>
-    </div>
-    <div class="flaticon">
+    </section>
+    <footer class="flaticon">
       <!-- <a href="Bockarns.html"> -->
       <img
         class="bockarns"
@@ -183,7 +189,7 @@
           www.flaticon.com</a
         >
       </p>
-    </div>
+    </footer>
     <script src="./index.js"></script>
   </body>
 </html>
