More structure added to get content where it needs to be.

--- a/cvNewSwe.html
+++ b/cvNewSwe.html
@@ -49,68 +49,86 @@
         <aside class="contactinfo skills">
           <div class="contact">
             <h3>KONTAKT</h3>
-            <ul>
-              <li>0737-53 52 35</li>
-              <li><a href="mailto:jerome.bock@gmail.com ">Privat mail</a></li>
-              <li>
+            <dl>
+              <dd>0737-53 52 35</dd>
+              <dd><a href="mailto:jerome.bock@gmail.com ">Privat mail</a></dd>
+              <dd>
                 <a
                   href="mailto:jerome.joris.roddy.gordonbock.webd25jon@edu.tucsweden.se"
                   >Tuc mail</a
                 >
-              </li>
-              <li>
+              </dd>
+              <dd>
                 <a href="linkedin.com/in/jerome-gordon-bock/">LinkedIn</a>
-              </li>
-              <li><a href="github.com/Bockarns">GitHub</a></li>
-            </ul>
-            <!-- 
-               
-               -->
+              </dd>
+              <dd><a href="github.com/Bockarns">GitHub</a></dd>
+            </dl>
           </div>
           <div class="break-line"></div>
           <div class="lang">
             <h3>SPRÅK</h3>
-            <ul>
-              <li>Svenska</li>
-              <li>Engelska</li>
-              <li>Tyska</li>
-            </ul>
+            <dl>
+              <dd>Svenska</dd>
+              <dd>Engelska</dd>
+              <dd>Tyska</dd>
+            </dl>
           </div>
           <div class="break-line"></div>
           <div class="Skills">
             <h3>FÄRDIGHETER</h3>
-            <ul>
-              <li>HTML5</li>
-              <li>CSS3</li>
-              <li>JavaScript (grundläggande)</li>
-              <li>C# (.NET grundläggande & fördjupning pågår)</li>
-              <li>Entity Framework Core (grundläggande & fördjupning pågår)</li>
-              <li>MS SQL (grundläggande & fördjupning pågår)</li>
-              <li>Grundläggande webbutveckling och responsiv design</li>
-              <li>Agila utvecklingsmetoder med Scrum</li>
-              <li>Problemlösning och felsökning</li>
-              <li>Versionshantering (grundläggande & fördjupning pågår)</li>
-              <li>Visual Studio</li>
-              <li>Visual Studio Code</li>
-              <li>Git/Github</li>
-            </ul>
+            <dl>
+              <dt>Webb & programmering:</dt>
+              <dd>HTML5</dd>
+              <dd>CSS3</dd>
+              <dd>JavaScript (grundläggande)</dd>
+              <dd>C# (.NET grundläggande & fördjupning pågår)</dd>
+              <dd>Entity Framework Core (grundläggande & fördjupning pågår)</dd>
+              <dd>MS SQL (grundläggande & fördjupning pågår)</dd>
+              <dd>Grundläggande webbutveckling och responsiv design</dd>
+              <dt>Arbetssätt & metoder:</dt>
+              <dd>Agila utvecklingsmetoder med Scrum</dd>
+              <dd>Problemlösning och felsökning</dd>
+              <dd>Versionshantering (grundläggande & fördjupning pågår)</dd>
+              <dt>Verktyg:</dt>
+              <dd>Visual Studio</dd>
+              <dd>Visual Studio Code</dd>
+              <dd>Git/Github</dd>
+            </dl>
           </div>
           <div class="break-line"></div>
-          <div class="interests"></div>
+          <div class="interests">
+            <h3>INTRESSEN</h3>
+            <dl>
+              <dd>Umgås med vänner och familj</dd>
+              <dd>Spela sällskapsspel och även tv/dataspel</dd>
+              <dd>
+                Gå promenader med familjen och upptäcka i naturen med mina barn.
+              </dd>
+            </dl>
+          </div>
         </aside>
-        <section class="introduction">
-          <h3>PROFIL</h3>
-          <p>
-            Webbutvecklarstudent inom webbutveckling och .NET. Har stark teknisk
-            nyfikenhet och lång yrkeserfarenhet av självständigt och lagarbete,
-            problemlösning och kundkontakt. Studerar för närvarande
-            webbutveckling inom yrkeshögskolan och har goda grunder i HTML, CSS,
-            JavaScript och C# .NET. Har även arbetat med databaser (MS SQL) och
-            Entity Framework Core. Van att arbeta strukturerat, både
-            självständigt och i team, med agila arbetssätt. Söker LIA-plats där
-            jag kan bidra, lära mig mer i praktiken och utvecklas vidare som
-            webbutvecklare.
-          </p>
+        <section class="main-content">
+          <div class="introduction">
+            <h3>PROFIL</h3>
+            <p>
+              Webbutvecklarstudent inom webbutveckling och .NET. Har stark
+              teknisk nyfikenhet och lång yrkeserfarenhet av självständigt och
+              lagarbete, problemlösning och kundkontakt. Studerar för närvarande
+              webbutveckling inom yrkeshögskolan och har goda grunder i HTML,
+              CSS, JavaScript och C# .NET. Har även arbetat med databaser (MS
+              SQL) och Entity Framework Core. Van att arbeta strukturerat, både
+              självständigt och i team, med agila arbetssätt. Söker LIA-plats
+              där jag kan bidra, lära mig mer i praktiken och utvecklas vidare
+              som webbutvecklare.
+            </p>
+          </div>
+          <div class="break-line"></div>
+          <div class="education">
+            <h3>UTBILDNINGSHISTORIK</h3>
+          </div>
+          <div class="break-line"></div>
+          <div class="experience"></div>
+          <h3>ARBETSLIVSERFARENHET</h3>
         </section>
       </article>
     </main>
