All content is in place in newcv fil

--- a/cvNewSwe.html
+++ b/cvNewSwe.html
@@ -50,18 +50,22 @@
           <div class="contact">
             <h3>KONTAKT</h3>
             <dl>
-              <dd>0737-53 52 35</dd>
-              <dd><a href="mailto:jerome.bock@gmail.com ">Privat mail</a></dd>
+              <dd>☎️ 0737-53 52 35</dd>
               <dd>
+                📧 <a href="mailto:jerome.bock@gmail.com ">Privat mail</a>
+              </dd>
+              <dd>
+                📧
                 <a
                   href="mailto:jerome.joris.roddy.gordonbock.webd25jon@edu.tucsweden.se"
                   >Tuc mail</a
                 >
               </dd>
               <dd>
+                🔗
                 <a href="linkedin.com/in/jerome-gordon-bock/">LinkedIn</a>
               </dd>
-              <dd><a href="github.com/Bockarns">GitHub</a></dd>
+              <dd>🔗 <a href="github.com/Bockarns">GitHub</a></dd>
             </dl>
           </div>
           <div class="break-line"></div>
@@ -125,10 +129,77 @@
           <div class="break-line"></div>
           <div class="education">
             <h3>UTBILDNINGSHISTORIK</h3>
+            <h4>
+              Webbutvecklare, Yrkeshögskola, 2025 augusti - Pågående <br />TUC
+              Sweden AB
+            </h4>
+            <ul>
+              <dt>Avklarade kurser:</dt>
+              <li>Kommunikation</li>
+              <li>HTML och CSS med agila utvecklingsmetoder</li>
+              <li>C# grundläggande (inkl. MS SQL & Entity Framework Core)</li>
+              <li>JavaScript 1</li>
+              <dt>Pågående kurs:</dt>
+              <li>Fördjupad programmering i C# (.NET)</li>
+              <dt>Kommande kurser:</dt>
+              <li>Design och UX</li>
+              <li>Publiceringsverktyg (CMS)</li>
+              <li>JavaScript 2</li>
+            </ul>
+            <p>
+              Utbildningen omfattar webbutveckling med fokus på HTML, CSS,
+              JavaScript och C# .NET, databaser, agila arbetsmetoder samt LIA
+              perioder med tydlig koppling till arbetslivet.
+            </p>
+            <h4>Komvux, 2022 - 2023 <br />Nyköpings Campus</h4>
+            <ul>
+              <li>Matematik 2a</li>
+              <li>Engelska 6</li>
+              <li>Programmering 1</li>
+              <li>Webbutveckling 1</li>
+            </ul>
+            <h4>
+              Handelsprogrammet, Gymnasieutbildning, 2001 - 2003 <br />Värmdö
+              Gymnasium
+            </h4>
           </div>
           <div class="break-line"></div>
           <div class="experience"></div>
           <h3>ARBETSLIVSERFARENHET</h3>
+          <h4>IT tekniker, Smartify AB, 2023 - Pågående</h4>
+          <ul>
+            <li>
+              Arbetar som IT Tekniker för hem och kontor, åker runt och hjälper
+              privatpersoner och företag med smarta hem och kontorslösningar.
+            </li>
+            <li>
+              Hjälper till med allt från att få internet att fungera till att få
+              igång datorer, tv, kanaler, konferenssystem, radio och mycket mer
+              att fungera även nyinstallation av dessa produkter.
+            </li>
+          </ul>
+          <h4>Låstekniker, Certego AB, 2012 - 2022</h4>
+          <ul>
+            <li>
+              Självständigt arbete med service och installation av
+              säkerhetslösningar
+            </li>
+            <li>Kundkontakt och behovsanalys</li>
+            <li>Arbete i team samt ansvar för planering och problemlösning</li>
+          </ul>
+          <h4>Tillverkning och butik, Bysmeden Lås AB, 2008 - 2012</h4>
+          <ul>
+            <li>
+              Butiksförsäljning av säkerhetsprodukter och lösningar,
+              ordermottagning
+            </li>
+            <li>Tillverkning samt lagerarbete med inköp.</li>
+          </ul>
+          <h4>Montör och butik, Audio Video AB, 2006 - 2008</h4>
+          <ul>
+            <li>Antenn- och Parabolmontage</li>
+            <li>Butiksförsäljning, lager och orderhantering</li>
+          </ul>
         </section>
       </article>
     </main>
