More structure for cv page, rename of css

--- a/cvNewSwe.html
+++ b/cvNewSwe.html
@@ -42,8 +42,9 @@
             />
           </figure>
           <div class="name-title">
-            <h1>Jerome Gordon-Bock</h1>
-            <h3>Webbutvecklingsstudent</h3>
+            <h1>Jerome</h1>
+            <h1>Gordon-Bock</h1>
+            <h2>Webbutvecklingsstudent</h2>
           </div>
         </section>
         <aside class="contactinfo skills">
@@ -203,6 +204,18 @@
         </section>
       </article>
     </main>
-    <footer></footer>
+    <footer>
+      <a
+        class="footer-link"
+        href="https://www.linkedin.com/in/jerome-gordon-bock/"
+        >LinkedIn</a
+      >
+      <a class="footer-link" href="https://twitter.com/Bockarn">Twitter</a>
+      <a class="footer-link" href="https://www.facebook.com/jeromebock"
+        >Facebook</a
+      >
+      <a class="footer-link" href="https://github.com/Bockarns">Github</a>
+      <p class="copyright">© 2026 Jerome Gordon-Bock.</p>
+    </footer>
   </body>
 </html>
