--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jerome Gordon-Bock</title>
-    <link rel="stylesheet" href="CSS/styles.css" />
+    <link rel="stylesheet" href="CSS/index.css" />
     <link rel="stylesheet" href="CSS/nav.css" />
     <link rel="icon" href="images/faviconjgb.ico" />
     <link
