New cv page matching downloadable layout complete, swedish and english. Old temporary removed.

--- a/cvNewSwe.html
+++ b/cvNewSwe.html
@@ -42,9 +42,16 @@
             />
           </figure>
           <div class="name-title">
+            <a href="./cvNewEng.html">English</a>
             <h1>Jerome</h1>
             <h1>Gordon-Bock</h1>
             <h2>Webbutvecklingsstudent</h2>
+            <a
+              class="btn"
+              href="./Downloadables/Jerome Gordon-Bock CV.pdf"
+              download="CV"
+              >Nedladdningsbart CV (PDF)
+            </a>
           </div>
         </section>
         <aside class="contactinfo skills">
