--- a/index.html
+++ b/index.html
@@ -29,12 +29,9 @@
           <li>
             <a href="#skill">Experience</a>
           </li>
-          <li>
-            <a href="./cvNewSwe.html">New CV(Work in progress)</a>
-          </li>
           <li><a href="#contact">Contact me</a></li>
           <li>
-            <a href="./CV-engl.html">CV/Resume</a>
+            <a href="./cvNewEng.html">CV/Resume</a>
           </li>
         </ul>
       </nav>
