--- a/cvNewEng.html
+++ b/cvNewEng.html
@@ -23,7 +23,7 @@
           <li><a href="./index.html#jag">Profile</a></li>
           <li><a href="./index.html#skill">Experience</a></li>
           <li><a href="./index.html#contact">Contact me</a></li>
-          <li><a href="./CV-engl.html">CV / Resume</a></li>
+          <li><a href="./cvNewSwe.html">CV / Resume</a></li>
         </ul>
       </nav>
     </header>
@@ -40,10 +40,7 @@
           </figure>
 
           <div class="name-title">
-            <a href="./cvNewSwe.html">Swedish</a>
-            <h1>Jerome</h1>
-            <h1>Gordon-Bock</h1>
-            <h2>Web Development Student</h2>
+            <a class="btn" href="./cvNewSwe.html">Swedish</a>
             <a
               class="btn"
               href="./Downloadables/Jerome Gordon-Bock CV eng.pdf"
@@ -51,6 +48,9 @@
             >
               Downloadable CV (PDF)
             </a>
+            <h1>Jerome</h1>
+            <h1>Gordon-Bock</h1>
+            <h2>Web Development Student</h2>
           </div>
         </section>
 
