--- a/cvNewSwe.html
+++ b/cvNewSwe.html
@@ -19,14 +19,14 @@
         </label>
         <ul class="menu">
           <li class="logo-holder"></li>
-          <li class="hidden-menu-choice"><a href="./index.html">Start</a></li>
+          <li class="hidden-menu-choice"><a href="./index.html">Home</a></li>
           <li><a href="./index.html#jag">Profile</a></li>
           <li>
             <a href="./index.html#skill">Experience</a>
           </li>
           <li><a href="./index.html#contact">Contact me</a></li>
           <li>
-            <a href="./CV-engl.html">CV/Resume</a>
+            <a href="./cvNewEng.html">CV / Resume</a>
           </li>
         </ul>
       </nav>
@@ -42,16 +42,16 @@
             />
           </figure>
           <div class="name-title">
-            <a href="./cvNewEng.html">English</a>
-            <h1>Jerome</h1>
-            <h1>Gordon-Bock</h1>
-            <h2>Webbutvecklingsstudent</h2>
+            <a class="btn" href="./cvNewEng.html">English</a>
             <a
               class="btn"
               href="./Downloadables/Jerome Gordon-Bock CV.pdf"
               download="CV"
               >Nedladdningsbart CV (PDF)
             </a>
+            <h1>Jerome</h1>
+            <h1>Gordon-Bock</h1>
+            <h2>Webbutvecklingsstudent</h2>
           </div>
         </section>
         <aside class="contactinfo skills">
