--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="description"
+      lang="sv"
+      content="Jerome Gordon-Bock, A programer in development."
+    />
+    <meta
+      name="google-site-verification"
+      content="U664dshlBIMliwmYEBbhLwnmIFW_qAR1CyFf-xn8W2k"
+    />
   </head>
 
   <body>
