Changed CV pages (intresse to Projects)

--- a/cvNewEng.html
+++ b/cvNewEng.html
@@ -119,15 +119,23 @@
 
           <div class="break-line"></div>
 
-          <div class="interests">
-            <h3>INTERESTS</h3>
+          <div class="Projects">
+            <h3>PROJECT - GITHUB</h3>
             <dl>
-              <dd>Spending time with friends and family</dd>
-              <dd>Playing board games and video/computer games</dd>
               <dd>
-                Going for walks with my family and exploring nature with my
-                children
+                Some projects I have completed during the courses I have
+                finished:
               </dd>
+              <dt>Golfklubb Centar (HTML & CSS)</dt>
+              <dd>
+                Responsive website for a fictional golf club. This is also the
+                project we are continuing to develop in the advanced programming
+                course.
+              </dd>
+              <dt>Biblioteks Program (Grundläggande programmering)</dt>
+              <dd>Console application for managing book loans using MS SQL.</dd>
+              <dt>Memory JS (JavaScript 1)</dt>
+              <dd>The card game Memory built in vanilla JavaScript.</dd>
             </dl>
           </div>
         </aside>
