--- a/cvNewSwe.html
+++ b/cvNewSwe.html
@@ -108,14 +108,22 @@
             </dl>
           </div>
           <div class="break-line"></div>
-          <div class="interests">
-            <h3>INTRESSEN</h3>
+          <div class="Projects">
+            <h3>PROJEKT - GITHUB</h3>
             <dl>
-              <dd>Umgås med vänner och familj</dd>
-              <dd>Spela sällskapsspel och även tv/dataspel</dd>
               <dd>
-                Gå promenader med familjen och upptäcka i naturen med mina barn.
+                Några projekt som jag gjort under de kurser som jag har
+                avslutat:
               </dd>
+              <dt>Golfklubb Centar (HTML & CSS)</dt>
+              <dd>
+                Responsiv webbplats för en fiktiv golfklubb. Detta är även den
+                vi arbetar med att utöka i fördjupad programmering.
+              </dd>
+              <dt>Biblioteks Program (Grundläggande programmering)</dt>
+              <dd>Konsolapplikation för att hantera bokutlåning med MS SQL.</dd>
+              <dt>Memory JS (JavaScript 1)</dt>
+              <dd>Kortspelet Memory byggt I vanilla JavaScript.</dd>
             </dl>
           </div>
         </aside>
